# wghub

./: .gitignore  README.md  docker-compose.yml  update.sh
services/core-api/: Dockerfile  README.md  app.py  pyproject.toml  wg.db
services/core-api/core_api/: api.py  auth.py
services/core-api/core_api/pihole/: connector.py
services/core-api/core_api/storages/: __init__.py  connector.py  interfaces.py  peers.py  tokens.py
services/core-api/core_api/wireguard/: config_builder.py  wg_connector.py  wireguard.py
services/core-api/tests/: addresses.py
services/telegram-bot/: Dockerfile  app.py  pyproject.toml
services/telegram-bot/telegram_bot/: api.py  config.py  storage.py
services/telegram-bot/telegram_bot/handlers/: __init__.py  info.py  interfaces.py
services/wg-api/: Dockerfile  app.py  main.py  pyproject.toml
services/wg-api/wg_api/: api.py  auth.py  storage.py  wg.py  wireguard.py
