[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["d0gied <german.n.u@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.12.0"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
